# roxy

./: .dockerignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
.sqlx/: query-2d5f75d6f7efbefe263e9caa04e76dbc47f32f665e0863ae9b1d29895cfd6c1e.json  query-3cd5a302b56e15f41a77857225df1e4dc5bc460d56ed380620df24ea0ff5fe75.json  query-6d6aea576d84c5fb056d105920e1255a9d135eece48f0400b06246a55f83a362.json  query-948dded6a567500f4c40645134f211fd74b57353f46654cd0b201e6479857ca5.json  query-a99d939f6569545910d2921b5152d384642ce6693c411bd802f3cb4f06bb4cd3.json  query-de16a58cbd0ecc6f340153f5b419722d440ec6f9ba6134a92d4eef4ab0843294.json
examples/: get_proxy_list.rs
src/: api.rs  latency.rs  lib.rs  route.rs  structs.rs
