[package]
name = "roxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5" }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8.6", features = ["chrono","macros","runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = { version = "0.14.0", features = ["yaml", "json", "toml"] }
dotenvy = "0.15.7"
oping = "0.4.0"
urlencoding = "2.1"
rand = "0.8"
